[package]
name = "stargazer-rs"
version = "0.1.0"
edition = "2018"

[lib]
name = "stargazer_lib"
path = "src/lib/lib.rs"

[[bin]]
name = "stargazer"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.12"
actix-web = "4.0.0-beta.9"
anyhow = "1.0"
async-trait = "0.1"
clap = "3.0.0-beta.4"
figment = { version = "0.10", features = ["toml", "json", "env"] }
dirs = "4.0"
futures = "0.3"
itertools = "0.10"
log = "0.4"
mongodb = { version = "2.0.0-beta.3", features = ["bson-u2i"] }
num_cpus = "1.13"
parking_lot = "0.11"
pin-project = "1.0"
pretty_env_logger = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.11", features = ["rt", "net", "parking_lot", "signal", "sync", "time"] }
uuid = { version = "0.8", features = ["v4", "serde"] }

[dev-dependencies]
figment = { version = "0.10", features = ["toml", "json", "env", "test"] }
