[package]
name = "stargazer-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "stargazer_lib"
path = "src/lib/lib.rs"

[[bin]]
name = "stargazer"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.12"
actix-rt = "2.5"
actix-signal = { version = "0.1", features = ["derive"] }
actix-web = "4.0.0-beta.13"
arraydeque = "0.4"
async-trait = "0.1"
actix-bililive = "0.1.0-beta.5"
clap = { version = "3.0.0-rc.4", features = ["derive"] }
derive-new = "0.5"
dirs = "4.0"
egg-mode = "0.16"
figment = { version = "0.10", features = ["toml", "json", "env"] }
futures = "0.3"
getset = "0.1"
humantime-serde = "1.0"
itertools = "0.10"
lapin = "1.9"
mongodb = { version = "2.1.0", features=["bson-uuid-0_8"] }
num_cpus = "1.13"
once_cell = { version = "1.8", features = ["parking_lot"] }
parking_lot = "0.11"
pin-project = "1.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
erased-serde = "0.3"
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.14", features = ["rt", "net", "parking_lot", "signal", "sync", "time"] }
tokio-amqp = "1.0"
tracing = "0.1"
tracing-actix = "0.3"
tracing-subscriber = { version = "0.3", features = ["parking_lot"] }
typed-builder = "0.9"
uuid = { version = "0.8", features = ["v4"] }

[dev-dependencies]
figment = { version = "0.10", features = ["toml", "json", "env", "test"] }
testcontainers = "0.12"
tracing-test = "0.2"
